# zipzoong

./: .env-temp  .gitignore  docker-compose-dev.yaml  docker-compose.yaml  dockerfile  manage.py  pyproject.toml  readme.md
app/db/: mysql.py
app/models/: house.py  user.py
apps/commons/: exceptions.py  models.py
apps/houses/: api.py  apps.py  urls.py  (+6 more)
config/: api.py  middleware.py  renderers.py  urls.py
mariadb/: my.conf
nginx/: nginx.conf
server/: docker-compose.yaml  dockerfile  entrypoint.sh  manage.py  pyproject.toml
server/apps/agents/apis/: api.py  schemas.py
server/apps/agents/domains/: models.py
server/apps/agents/services/: exceptions.py  services.py
server/apps/brokers/apis/: api.py  schemas.py
server/apps/brokers/domains/: models.py
server/apps/brokers/services/: exceptions.py  services.py
server/apps/commons/: core.py  exceptions.py  utils.py
server/apps/houses/: api.py  apps.py  exceptions.py  models.py  schemas.py  services.py
server/apps/houses/apis/: api.py  schemas.py
server/apps/houses/domains/: models.py
server/apps/houses/migrations/: 0001_initial.py
server/apps/houses/services/: enums.py  services.py  utils.py
server/apps/users/: api.py  exceptions.py  models.py  schemas.py  utils.py
server/apps/users/apis/: api.py  schemas.py
server/apps/users/domains/: models.py
server/apps/users/migrations/: 0001_initial.py
server/apps/users/services/: services.py
server/apps/users/tests/: tests_users.py
server/config/: api.py  gunicorn.conf.py  wsgi.py
server/config/settings/: base.py  dev.py  local.py  prod.py
(+10 files in other folders)
