[tool.poetry]
name = "zipzoong"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
drf-yasg = "^1.20.0"
django-dotenv = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
